// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`CxCardSubtitle customize 1`] = `
<div>
  <h3
    class="card-subtitle bazinga"
  >
    Test
  </h3>
</div>
`;

exports[`loads and displays CxCardSubtitle component 1`] = `
<div>
  <h6
    class="card-subtitle"
  >
    Test
  </h6>
</div>
`;
